Allow security.manager for jps tests
in Java 21 security manager become disabled by default

Change-Id: I9aa7f40295ddb6e981799730bb835c54efee5fb6

GitOrigin-RevId: 3edd21c16f6bc1b83988c54d4ab7b02aaa6c5565