@@ -14,6 +14,7 @@ echo "-Didea.config.path=$JPS_WORKSPACE/config" >> .test/args.txt
 echo '-Didea.test.cyclic.buffer.size=1048576' >> .test/args.txt
 echo "-Dbazel.test_suite=$TEST_SUITE" >> .test/args.txt
 echo "-Didea.root=$PWD" >> .test/args.txt
+echo "-Djava.security.manager=allow" >> .test/args.txt
 
 echo -n "-cp $BAZEL_RUNNER:" >> .test/args.txt
 cat out/studio/artifacts/module-tests/$TEST_MODULE.classpath.txt | sed "s#^#../../#" | tr '\n' ':' >> .test/args.txt
